--- a/components/ui/ActionBar/index.module.scss
+++ b/components/ui/ActionBar/index.module.scss
@@ -1,8 +1,5 @@
-@use '~styles/lib/breakpoints' as *;
-@use '~styles/lib/spacer' as *;
-
 .actionBar {
-	@include break('lg') {
-		min-height: space(8);
+	a {
+		text-decoration: none;
 	}
 }
