Added plop templates and updated component directory

--- a/styles/bootstrap.custom.scss
+++ b/styles/bootstrap.custom.scss
@@ -5,6 +5,9 @@
 
 @import '~bootstrap/scss/bootstrap';
 
+$theme-colors: (
+  "primary": #0078D7,
+);
 // TODO: Optomize bootstrap loading
 // Then add additional custom code here
 
