--- a/plop_templates/Component/index.tsx.hbs
+++ b/plop_templates/Component/index.tsx.hbs
@@ -6,7 +6,7 @@
 import { useState } from 'react'
 {{/if}}
 import styles from './index.module.scss'
-import type ComponentProps from '~types/componentProps'
+import type ComponentProps from '~types/ComponentProps'
 
 interface {{properCase name}}Props extends ComponentProps {
 	title?: string
