--- a/components/ui/NavBar/index.module.scss
+++ b/components/ui/NavBar/index.module.scss
@@ -1,5 +1,9 @@
+/*!
+ * Copyright (c) Microsoft. All rights reserved.
+ * Licensed under the MIT license. See LICENSE file in the project.
+ */
 @use '~styles/lib/breakpoints' as *;
-@use '~styles/lib/spacer' as *;
+@use '~styles/lib/space' as *;
 
 .actionBar {
 	@include break('lg') {
